_SC_PIRI: SOCPlayer.legalShips restricted by legalShipsRestricted (still todo some interaction with potentials); javadocs